<resources>
    <string name="app_name">Gamefication</string>
    <string name="h_bitos">Hábitos</string>
    <string name="tarefas">Tarefas</string>
    <string name="user">User</string>
    <string name="xp">XP</string>
    <string name="fazer">Fazer</string>
    <string name="remover">Remover</string>
    <string name="t_tulo">Título</string>
    <string name="descri_o">Descrição</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="adicionar">Adicionar</string>
    <string name="string_cardtitulohab">Título do Hábito</string>
    <string name="digite_o_t_tulo">Digite o título</string>
    <string name="digite_a_descri_o">Digite a descrição</string>
    <string name="descri_o_do_h_bito">Descrição do Hábito</string>
    <string name="dificuldade">Dificuldade</string>
    <string name="cancelar">Cancelar</string>
    <string name="salvar">Salvar</string>
    <string name="f_cl">Fácl</string>
</resources>